2008/10/16 (TS):
 - padProtoHost.c: added 'server' mode which can stream (simulated) data
   to a client.
 - padStream.c: bugfix; streamSim() used wrong stride in col-major mode;
   has to be 4 (n-channels) not nsamples.
2008/1/18 (TS):
 - lanIpBasic:
     - added udpSockNRead() to find number of bytes in RX queue available
	   for reading
	 - eliminated 'Peer' struct. Moved 'interface' to socket (where it
	   belongs).
	   The socket now holds a UDP header and a flag to indicate if
	   the socket is 'connected'. If 'connected' the UDP header
	   holds the peer information. If not connected the header can
	   be reused by udpSockSendTo() for various destinations.
	 - added udpSockSendTo() for communication over unconnected sockets.
	 - lock socket while in udpSockConnect()
 - drvUdpSock:
     - buffer leftover chars from a received packet for subsequent read.
 - added 'drvUdpSock' - a simple driver to provide std. filesystem
   I/O over lanIpBasic/UDP 'sockets'.
2008/1/17 (TS):
 - renamed EtherHeader -> EthHeader; there was a name conflict with
   SPEAR software / the AMD pcnet32 driver for which I wanted to add
   support.
 - added support for AMD 79c97x chips (PMC card which is handy; the
   ultimate goal is using udpComm for a GDB connection.
 - FIXED: endian-ness bug: IP checksums must not be converted to network
   byte-order.
2007/10/4 (TS):
 - udpSockSend() return value was inconsistent with BSD semantics
   (thanks to Stephen Norum) because it also counted the header bytes.
2007/9/6 (TS):
 - eliminated 'sd' argument from udpCommReturnPacket().